[gd_scene load_steps=11 format=2]

[ext_resource path="res://levels/prefabs/battle_gui/prefabs/active_actor_panel/scripts/active-actor-panel.gd" type="Script" id=1]
[ext_resource path="res://assets/gfx/test_portait.png" type="Texture" id=2]
[ext_resource path="res://assets/spritesheets/greybox_tiles/greybox_tiles_spritesheet.png" type="Texture" id=3]
[ext_resource path="res://levels/prefabs/battle_gui/prefabs/active_actor_panel/scripts/stat-container.gd" type="Script" id=4]


[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/Roboto/Roboto-Black.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="Theme" id=3]
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource( 2 )
Label/styles/normal = null

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[node name="ActiveActorPanel" type="NinePatchRect"]
self_modulate = Color( 1, 1, 1, 0.470588 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -400.0
margin_right = 784.0
rect_min_size = Vector2( 600, 400 )
theme = SubResource( 3 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="NeutralPortait" type="TextureRect" parent="HBoxContainer"]
margin_right = 256.0
margin_bottom = 380.0
rect_min_size = Vector2( 256, 360 )
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 260.0
margin_right = 760.0
margin_bottom = 380.0
alignment = 2

[node name="StatPanel" type="NinePatchRect" parent="HBoxContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.470588 )
margin_top = 80.0
margin_right = 500.0
margin_bottom = 380.0
rect_min_size = Vector2( 500, 300 )
texture = SubResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/StatPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 10

[node name="ActorName" type="Label" parent="HBoxContainer/VBoxContainer/StatPanel/VBoxContainer"]
margin_right = 480.0
margin_bottom = 36.0
text = "ActorName"

[node name="ActorLevelJob" type="Label" parent="HBoxContainer/VBoxContainer/StatPanel/VBoxContainer"]
margin_top = 46.0
margin_right = 480.0
margin_bottom = 82.0
text = "Level 00 -  Job"

[node name="HPContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/StatPanel/VBoxContainer"]
margin_top = 92.0
margin_right = 480.0
margin_bottom = 132.0
custom_constants/separation = 20
script = ExtResource( 4 )

[node name="StatLabel" type="Label" parent="HBoxContainer/VBoxContainer/StatPanel/VBoxContainer/HPContainer"]
margin_top = 2.0
margin_right = 41.0
margin_bottom = 38.0
text = "HP"

[node name="TextureProgress" type="TextureProgress" parent="HBoxContainer/VBoxContainer/StatPanel/VBoxContainer/HPContainer"]
margin_left = 61.0
margin_right = 261.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
value = 50.0
texture_under = SubResource( 5 )
texture_progress = SubResource( 6 )
nine_patch_stretch = true

[node name="ValueLabel" type="Label" parent="HBoxContainer/VBoxContainer/StatPanel/VBoxContainer/HPContainer"]
margin_left = 281.0
margin_top = 2.0
margin_right = 374.0
margin_bottom = 38.0
text = "00 / 00"

[node name="ArmorContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/StatPanel/VBoxContainer"]
margin_top = 142.0
margin_right = 480.0
margin_bottom = 182.0
custom_constants/separation = 20
script = ExtResource( 4 )
type = "armor"

[node name="StatLabel" type="Label" parent="HBoxContainer/VBoxContainer/StatPanel/VBoxContainer/ArmorContainer"]
margin_top = 2.0
margin_right = 40.0
margin_bottom = 38.0
text = "AP"

[node name="TextureProgress" type="TextureProgress" parent="HBoxContainer/VBoxContainer/StatPanel/VBoxContainer/ArmorContainer"]
margin_left = 60.0
margin_right = 260.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
value = 50.0
texture_under = SubResource( 5 )
texture_progress = SubResource( 6 )
nine_patch_stretch = true

[node name="ValueLabel" type="Label" parent="HBoxContainer/VBoxContainer/StatPanel/VBoxContainer/ArmorContainer"]
margin_left = 280.0
margin_top = 2.0
margin_right = 373.0
margin_bottom = 38.0
text = "00 / 00"

[node name="ShieldContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/StatPanel/VBoxContainer"]
margin_top = 192.0
margin_right = 480.0
margin_bottom = 232.0
custom_constants/separation = 20
script = ExtResource( 4 )
type = "shields"

[node name="StatLabel" type="Label" parent="HBoxContainer/VBoxContainer/StatPanel/VBoxContainer/ShieldContainer"]
margin_top = 2.0
margin_right = 39.0
margin_bottom = 38.0
text = "SP"

[node name="TextureProgress" type="TextureProgress" parent="HBoxContainer/VBoxContainer/StatPanel/VBoxContainer/ShieldContainer"]
margin_left = 59.0
margin_right = 259.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
value = 50.0
texture_under = SubResource( 5 )
texture_progress = SubResource( 6 )
nine_patch_stretch = true

[node name="ValueLabel" type="Label" parent="HBoxContainer/VBoxContainer/StatPanel/VBoxContainer/ShieldContainer"]
margin_left = 279.0
margin_top = 2.0
margin_right = 372.0
margin_bottom = 38.0
text = "00 / 00"

